# rusticom

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: bus.rs  cpu.rs  main.rs  mem.rs  opcode.rs  rom.rs  trace.rs
src/cpu/: mod.rs  tests.rs
src/ppu/: addrreg.rs  ctrlreg.rs  maskreg.rs  mod.rs  scrollreg.rs  statusreg.rs
src/rom/: mod.rs  tests.rs
src/trace/: tests.rs
