[package]
name = "rusticom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
lazy_static = "1.4.0"
sdl2 = "0.35.2"
rand = "0.8.5"
clap = { version = "4.5.4", features = ["derive"] }
clap-num = "1.1.1"
